--- a/centos/Dockerfile
+++ b/centos/Dockerfile
@@ -1,5 +1,5 @@
 FROM centos:latest
-MAINTAINER James Turnbull "james@example.com"
-ENV REFRESHED_AT 2014-06-01
+MAINTAINER Tony Vickers "lellowconsulting@gmail.com"
+ENV REFRESHED_AT 2016-05-05
 RUN yum -y install ruby rubygems rubygem-rake
 RUN gem install --no-rdoc --no-ri rspec ci_reporter_rspec
