--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -1,6 +1,6 @@
 FROM  ubuntu:14.04
-MAINTAINER James Turnbull "james@example.com"
-ENV REFRESHED_AT 2014-06-01
+MAINTAINER Tony Vickers "lellowconsulting@gmail.com"
+ENV REFRESHED_AT 2016-05-05
 RUN apt-get update
 RUN apt-get -y install ruby rake
 RUN gem install --no-rdoc --no-ri rspec ci_reporter_rspec
